--- a/exercises/Session_3_4_EXERCISES.ipynb
+++ b/exercises/Session_3_4_EXERCISES.ipynb
@@ -66,7 +66,7 @@
         "import seaborn as sns\n",
         "df = pd.read_csv(\"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\" , delimiter = '|' , index_col= 'user_id')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "#What is the mean age per occupation?\n",
         "df.groupby( by= 'occupation').mean()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,7 +261,7 @@
         "\n",
         "jdf.sort_values(by='male_ratio' , ascending= False)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +580,7 @@
         "\n",
         "jdf.sort_values(by='female_ratio' , ascending= False)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
         "df.groupby( by= 'occupation').max()\n",
         "df.groupby( by= 'occupation').min()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1112,7 +1112,7 @@
         "#For each combination of occupation and gender, calculate the mean age\n",
         "df.groupby( by= ['occupation' , 'gender']).mean('age')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1404,7 +1404,7 @@
         "\n",
         "new_df.head()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1492,7 +1492,7 @@
         "\n",
         "new_df.plot(kind='bar', stacked=True)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1548,7 +1548,7 @@
         "import pandas as pd \n",
         "data = pd.read_csv('https://raw.githubusercontent.com/vfp1/bts-dsf-2020/main/data/US_Crime_Rates_1960_2014.csv')"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1565,7 +1565,7 @@
         "\n",
         "data.dtypes"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1609,7 +1609,7 @@
         "\n",
         "data.dtypes"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1647,7 +1647,7 @@
         "\n",
         "data.set_index('Year' , inplace=True)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1666,7 +1666,7 @@
         "data = data.drop(columns='Total')\n",
         "data"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2519,7 +2519,7 @@
         "\n",
         "data.groupby((data.index.year//10)*10).sum()"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2690,7 +2690,7 @@
         "data.sort_values(by='Crime_ratio',ascending=False).head(1)\n",
         "\n"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2820,6 +2820,214 @@
         "    * What is the table size that is most likely to bring a better tip?\n",
         "    * Who are giving more tips, smokers or non smokers? "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYLKdUXDODgz",
+        "outputId": "47041768-d500-4f37-aafd-1b3b0c7d9147",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import pandas as pd \n",
+        "import sqlite3\n",
+        "import numpy as np\n",
+        "\n",
+        "data = pd.read_csv('https://raw.githubusercontent.com/vfp1/bts-dsf-2020/main/data/tips.csv')\n",
+        "data.shape"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(244, 7)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X8Tro8GbctQo"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OmvBbIj0ODxu"
+      },
+      "source": [
+        "#Save the DataFrame as SQLite\n",
+        "\n",
+        "#1created database with one table \n",
+        "conn = sqlite3.connect('tips.db')\n",
+        "c  = conn.cursor()\n",
+        "c.execute('''CREATE TABLE if not exists tips (total_bill, tip, sex, smoker, day, time, size)''')\n",
+        "\n",
+        "#2converted frame into an array to itterate on it \n",
+        "l = np.array(data.values.astype(object))\n",
+        "\n",
+        "\n",
+        "for i in l:\n",
+        "  query = 'INSERT INTO tips (total_bill, tip, sex, smoker, day, time, size)  values(?,?,?,?,?,?,?)' \n",
+        "  c.execute(query , i )\n",
+        "\n",
+        "conn.commit()\n",
+        "conn.close()\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 106,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7RrbQlQzdQZt",
+        "outputId": "3704bca6-3e37-42d0-d142-f432f9a57e46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Who is most likely to receive a tip during weekday? A Female or a Male?\n",
+        "conn = sqlite3.connect('tips.db')\n",
+        "c  = conn.cursor()\n",
+        "query = 'SELECT sex , count(*) from tips GROUP BY sex'\n",
+        "c.execute(query)\n",
+        "c.fetchall()\n"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Female', 87), ('Male', 157)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NC0FSdpnhYeh",
+        "outputId": "19cbb126-fa86-4b11-a1c9-0be628550cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        }
+      },
+      "source": [
+        "#And during weekends?\n",
+        "conn = sqlite3.connect('tips.db')\n",
+        "c  = conn.cursor()\n",
+        "query = 'SELECT sex , day, count(*) from tips GROUP BY day'\n",
+        "c.execute(query)\n",
+        "df = c.fetchall()\n",
+        "df = pd.DataFrame(df)\n",
+        "df.loc[:,'1']"
+      ],
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Female</td>\n",
+              "      <td>Fri</td>\n",
+              "      <td>19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Male</td>\n",
+              "      <td>Sat</td>\n",
+              "      <td>87</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Male</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>76</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Female</td>\n",
+              "      <td>Thur</td>\n",
+              "      <td>62</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        0     1   2\n",
+              "0  Female   Fri  19\n",
+              "1    Male   Sat  87\n",
+              "2    Male   Sun  76\n",
+              "3  Female  Thur  62"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 156
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G9B5ypINOD8A"
+      },
+      "source": [
+        "query = '''SELECT sex,CASEWHEN (day != 'Sat') and (day != 'Sun') THEN 'weekday'ELSE 'weekend' END "
+      ],
+      "execution_count": 147,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
