--- a/exercises/Session_3_4_EXERCISES.ipynb
+++ b/exercises/Session_3_4_EXERCISES.ipynb
@@ -2838,7 +2838,7 @@
         "data = pd.read_csv('https://raw.githubusercontent.com/vfp1/bts-dsf-2020/main/data/tips.csv')\n",
         "data.shape"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2889,7 +2889,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2909,7 +2909,7 @@
         "c.execute(query)\n",
         "c.fetchall()\n"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2929,105 +2929,113 @@
       "cell_type": "code",
       "metadata": {
         "id": "NC0FSdpnhYeh",
-        "outputId": "19cbb126-fa86-4b11-a1c9-0be628550cd3",
+        "outputId": "7953baff-1900-4b4a-a97d-9944f5106111",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "#And during weekends?\n",
         "conn = sqlite3.connect('tips.db')\n",
         "c  = conn.cursor()\n",
-        "query = 'SELECT sex , day, count(*) from tips GROUP BY day'\n",
+        "query =\"\"\" Select sex , count(*) from tips \n",
+        "Where day <> 'Sat' \n",
+        "AND day <> 'Sun'\n",
+        "GROUP by sex\n",
+        "\"\"\"\n",
         "c.execute(query)\n",
-        "df = c.fetchall()\n",
-        "df = pd.DataFrame(df)\n",
-        "df.loc[:,'1']"
+        "c.fetchall()"
       ],
-      "execution_count": 156,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Female</td>\n",
-              "      <td>Fri</td>\n",
-              "      <td>19</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Male</td>\n",
-              "      <td>Sat</td>\n",
-              "      <td>87</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Male</td>\n",
-              "      <td>Sun</td>\n",
-              "      <td>76</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Female</td>\n",
-              "      <td>Thur</td>\n",
-              "      <td>62</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "        0     1   2\n",
-              "0  Female   Fri  19\n",
-              "1    Male   Sat  87\n",
-              "2    Male   Sun  76\n",
-              "3  Female  Thur  62"
+              "[('Female', 41), ('Male', 40)]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 156
+          "execution_count": 163
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G9B5ypINOD8A"
+        "id": "HZeKklJrsGxz",
+        "outputId": "a1152a4d-9cde-4b84-f149-cf5127100945",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "query = '''SELECT sex,CASEWHEN (day != 'Sat') and (day != 'Sun') THEN 'weekday'ELSE 'weekend' END "
+        "#What is the table size that is most likely to bring a better tip?\n",
+        "conn = sqlite3.connect('tips.db')\n",
+        "c  = conn.cursor()\n",
+        "query =\"\"\"\n",
+        "Select size, count(*) from tips \n",
+        "GROUP by size\n",
+        "order by count(*)\n",
+        "\"\"\"\n",
+        "c.execute(query)\n",
+        "c.fetchall()\n"
       ],
-      "execution_count": 147,
-      "outputs": []
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 4), (6, 4), (5, 5), (4, 37), (3, 38), (2, 156)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 164
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G9B5ypINOD8A",
+        "outputId": "d59673e9-32c2-4dcc-c3ca-569bde33d5b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Who are giving more tips, smokers or non smokers?\n",
+        "\n",
+        "conn = sqlite3.connect('tips.db')\n",
+        "c  = conn.cursor()\n",
+        "query =\"\"\"\n",
+        "Select smoker, count(*) from tips \n",
+        "GROUP by smoker\n",
+        "order by count(*)\n",
+        "\"\"\"\n",
+        "c.execute(query)\n",
+        "c.fetchall()"
+      ],
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Yes', 93), ('No', 151)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 166
+        }
+      ]
     },
     {
       "cell_type": "markdown",
