--- a/exercises/Session_3_4_EXERCISES.ipynb
+++ b/exercises/Session_3_4_EXERCISES.ipynb
@@ -3071,13 +3071,521 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8o0sw6WcJY_Z"
+        "id": "8o0sw6WcJY_Z",
+        "outputId": "bf3e761b-3cbf-4e7d-9bb7-057c8e5228ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!pip install geopandas"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: geopandas in /usr/local/lib/python3.6/dist-packages (0.8.1)\n",
+            "Requirement already satisfied: fiona in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.8.17)\n",
+            "Requirement already satisfied: shapely in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.7.1)\n",
+            "Requirement already satisfied: pyproj>=2.2.0 in /usr/local/lib/python3.6/dist-packages (from geopandas) (2.6.1.post1)\n",
+            "Requirement already satisfied: pandas>=0.23.0 in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.1.3)\n",
+            "Requirement already satisfied: click-plugins>=1.0 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (1.1.1)\n",
+            "Requirement already satisfied: munch in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (2.5.0)\n",
+            "Requirement already satisfied: six>=1.7 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (1.15.0)\n",
+            "Requirement already satisfied: attrs>=17 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (20.2.0)\n",
+            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (0.7.0)\n",
+            "Requirement already satisfied: click<8,>=4.0 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (7.1.2)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (2018.9)\n",
+            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (1.18.5)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (2.8.1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MzEnxzwytTXr"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import geopandas as gpd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import sqlite3 \n",
+        "\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT * FROM airports \"\"\"\n",
+        "\n",
+        "data = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "data.head()"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h6GIEL0Zu9YZ",
+        "outputId": "4ae69f3b-a92f-422a-823b-87aec1e3da9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "#Which is the country that has the least amount of active airlines?\n",
+        "\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT country , count(*) FROM airlines\n",
+        "WHERE active = 'Y'\n",
+        "GROUP by country\n",
+        "ORDER by Count(*) ASC \"\"\"\n",
+        "\n",
+        "data = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "data.head()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>country</th>\n",
+              "      <th>count(*)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>S.A.</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>ALASKA</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>AVIANCA</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>American Samoa</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Antigua and Barbuda</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               country  count(*)\n",
+              "0                 S.A.         1\n",
+              "1               ALASKA         1\n",
+              "2              AVIANCA         1\n",
+              "3       American Samoa         1\n",
+              "4  Antigua and Barbuda         1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QzJz1pZ0wEWw",
+        "outputId": "36cb6010-f293-47d8-916f-9e6d5749785a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "#And which is the country that has the most amount of active airlines?\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT country , count(*) FROM airlines\n",
+        "WHERE active = 'Y'\n",
+        "GROUP by country\n",
+        "ORDER by Count(*) DESC \"\"\"\n",
+        "\n",
+        "data = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "data.head(1)\n"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>country</th>\n",
+              "      <th>count(*)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>United States</td>\n",
+              "      <td>141</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         country  count(*)\n",
+              "0  United States       141"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WkRIoJ5hwZqQ",
+        "outputId": "a088c5dc-8958-41e7-9ee9-025b52a42030",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "#Which is the country that has more airports?\n",
+        "\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT country , COUNT(*) FROM airports\n",
+        "GROUP BY country\n",
+        "ORDER BY COUNT(*) DESC\n",
+        "\"\"\"\n",
+        "\n",
+        "data = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "data.head(1)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>country</th>\n",
+              "      <th>COUNT(*)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>United States</td>\n",
+              "      <td>1697</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         country  COUNT(*)\n",
+              "0  United States      1697"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Lqp8L1nxfrV",
+        "outputId": "61a0fbf8-3659-461e-f0bc-a4c1b591e7d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "#And the country with the least airports?\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT country , COUNT(*) FROM airports\n",
+        "GROUP BY country\n",
+        "ORDER BY COUNT(*) ASC\n",
+        "\"\"\"\n",
+        "\n",
+        "data = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "data.head(1)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>country</th>\n",
+              "      <th>COUNT(*)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Albania</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   country  COUNT(*)\n",
+              "0  Albania         1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DMtbqTENx5Oe",
+        "outputId": "2ffd78fc-fabe-4644-b000-a68c3633ec53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Which country has the most outgoing destinations? And the least?\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT  country, count(dest) FROM routes \n",
+        "INNER JOIN airports\n",
+        "ON airports.code = routes.source\n",
+        "GROUP BY country \n",
+        "ORDER BY count(dest) DESC \n",
+        "\"\"\"\n",
+        "\n",
+        "data1 = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "query = \"\"\"SELECT  country, count(dest) FROM routes \n",
+        "INNER JOIN airports\n",
+        "ON airports.code = routes.source\n",
+        "GROUP BY country \n",
+        "ORDER BY count(dest) ASC\n",
+        "\"\"\" \n",
+        "data2 = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "print(data1.head(1))\n",
+        "print(data2.head(1))"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "         country  count(dest)\n",
+            "0  United States        13195\n",
+            "          country  count(dest)\n",
+            "0  American Samoa            1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p4bl8Hhrxvnc",
+        "outputId": "c89f897d-611b-4437-a1db-ede54a09897d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "#And which country has the most incoming destinations? And the least?\n",
+        "conn  = sqlite3.connect('flights.db')\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "query = \"\"\"SELECT  country, count(dest) FROM routes \n",
+        "INNER JOIN airports\n",
+        "ON airports.code = routes.dest\n",
+        "GROUP BY country \n",
+        "ORDER BY count(dest) DESC \n",
+        "\"\"\"\n",
+        "\n",
+        "data = pd.read_sql_query(query , conn)\n",
+        "\n",
+        "conn.close()\n",
+        "\n",
+        "data.head(1)\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>country</th>\n",
+              "      <th>count(dest)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>United States</td>\n",
+              "      <td>13189</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         country  count(dest)\n",
+              "0  United States        13189"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "markdown",
