--- a/Copy_of_Session_1_2_EXERCISES.ipynb
+++ b/Copy_of_Session_1_2_EXERCISES.ipynb
@@ -75,7 +75,7 @@
         "data = pd.read_csv('/content/pythondevsurvey2017_raw_data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +656,7 @@
         "plt.figure(figsize=(20,10))\n",
         "df_main_single['What do you use Python for the most?'].value_counts().plot()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
         "plt.figure(figsize=(20,10))\n",
         "df_main_multi['What do you use Python for the most?'].value_counts().plot()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +778,7 @@
         "nd_a = np.array(a)\n",
         "nd_a"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +810,7 @@
         "#Print the whole array using slice\n",
         "print(nd_a[:])"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,7 +837,7 @@
         "#Print number 12\n",
         "nd_a[2,1]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +866,7 @@
         "#Reverse the array\n",
         "nd_a[::-1]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -898,7 +898,7 @@
         "#Reverse only one row in the array\n",
         "np.flip( nd_a[0:1:])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +927,7 @@
         "#Slice the first three columns in the array\n",
         "nd_a[:,0:3]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -960,7 +960,7 @@
         "x = nd_a[::,2:]\n",
         "x[::,::-1]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +993,7 @@
         "\n",
         "print(nd_a[-2::,:])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1018,7 @@
         "#Slice the last integers in a row\n",
         "nd_a[-1::,-3:]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1050,7 +1050,7 @@
         "data\n",
         "# Hi Victor, I am not sure what do you mean by Slic rows and columns "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1100,7 +1100,7 @@
       "source": [
         "!curl -o FremontBridge.csv https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1133,7 @@
         "#Display the DataFrame\n",
         "data.head()\n"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1242,7 +1242,7 @@
         "\n",
         "# answer : busiest hour is 17\n"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1351,7 +1351,7 @@
         "\n",
         "# answer : in the East side walk is better during the evening is the least crowded ."
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1407,7 +1407,7 @@
         "newdata.iloc[:,0:2][ newdata.index.isin([15,16,17,18,19,20])].plot()\n",
         "# Answer :  west side is less traffic in 6 - 9  . east side is less traffic 15 to 20 "
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1479,7 +1479,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1529,7 +1529,7 @@
         "sns.barplot(x=dfall.index, y= dfall['Fremont Bridge Total'])\n",
         "dfall"
       ],
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,18 +1626,19 @@
         "id": "k0xMrNse3n8g"
       },
       "source": [
+        "import pandas as pd\n",
         "data = pd.read_csv('https://raw.githubusercontent.com/vfp1/bts-dsf-2020/main/data/appl_1980_2014.csv', index_col='Date', parse_dates=True)\n",
         "from dateutil import parser\n",
         "import numpy as np"
       ],
-      "execution_count": 159,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0j9gVDk74-gS",
-        "outputId": "e049864a-e18f-42e1-ef78-8f98e3583581",
+        "outputId": "dde5e1d5-3ca2-4ba9-aeb8-ddcf381b64a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
@@ -1648,7 +1649,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 160,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1693,7 +1694,7 @@
               "    <tr>\n",
               "      <th>2014-07-08</th>\n",
               "      <td>96.27</td>\n",
-              "      <td>96.8</td>\n",
+              "      <td>96.80</td>\n",
               "      <td>93.92</td>\n",
               "      <td>95.35</td>\n",
               "      <td>65130000</td>\n",
@@ -1703,7 +1704,7 @@
               "      <th>2014-07-07</th>\n",
               "      <td>94.14</td>\n",
               "      <td>95.99</td>\n",
-              "      <td>94.1</td>\n",
+              "      <td>94.10</td>\n",
               "      <td>95.97</td>\n",
               "      <td>56305400</td>\n",
               "      <td>95.97</td>\n",
@@ -1711,8 +1712,8 @@
               "    <tr>\n",
               "      <th>2014-07-03</th>\n",
               "      <td>93.67</td>\n",
-              "      <td>94.1</td>\n",
-              "      <td>93.2</td>\n",
+              "      <td>94.10</td>\n",
+              "      <td>93.20</td>\n",
               "      <td>94.03</td>\n",
               "      <td>22891800</td>\n",
               "      <td>94.03</td>\n",
@@ -1740,19 +1741,19 @@
               "</div>"
             ],
             "text/plain": [
-              "            Open  High   Low  Close    Volume  Adj Close\n",
-              "Date                                                    \n",
-              "2014-07-08 96.27  96.8 93.92  95.35  65130000      95.35\n",
-              "2014-07-07 94.14 95.99  94.1  95.97  56305400      95.97\n",
-              "2014-07-03 93.67  94.1  93.2  94.03  22891800      94.03\n",
-              "2014-07-02 93.87 94.06 93.09  93.48  28420900      93.48\n",
-              "2014-07-01 93.52 94.07 93.13  93.52  38170200      93.52"
+              "             Open   High    Low  Close    Volume  Adj Close\n",
+              "Date                                                       \n",
+              "2014-07-08  96.27  96.80  93.92  95.35  65130000      95.35\n",
+              "2014-07-07  94.14  95.99  94.10  95.97  56305400      95.97\n",
+              "2014-07-03  93.67  94.10  93.20  94.03  22891800      94.03\n",
+              "2014-07-02  93.87  94.06  93.09  93.48  28420900      93.48\n",
+              "2014-07-01  93.52  94.07  93.13  93.52  38170200      93.52"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 160
+          "execution_count": 3
         }
       ]
     },
@@ -1760,7 +1761,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "F4eR2TCI5C0f",
-        "outputId": "a87af0c3-3578-47fc-c5db-ff4f704b882b",
+        "outputId": "7044baa2-e939-4ec4-c264-7df609de9cde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1779,7 +1780,7 @@
         "\n",
         "print( 'Amount' , Amount , \"profit\" , profit)"
       ],
-      "execution_count": 167,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1794,7 +1795,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0EhVCfAS5HTI",
-        "outputId": "28871576-5704-421c-e9c7-038e684299a9",
+        "outputId": "35791ea2-ae6a-4c3e-c357-a1e8e288f420",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 348
@@ -1807,14 +1808,14 @@
         "\n",
         "data['Volume'].max()"
       ],
-      "execution_count": 171,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "            Open  High   Low  Close      Volume  Adj Close        date\n",
-            "Date                                                                  \n",
-            "2000-09-29 28.19  29.0 25.38     25  1855410200       1.76  2000-09-29\n"
+            "             Open  High    Low  Close      Volume  Adj Close        date\n",
+            "Date                                                                    \n",
+            "2000-09-29  28.19  29.0  25.38     25  1855410200       1.76  2000-09-29\n"
           ],
           "name": "stdout"
         },
@@ -1828,7 +1829,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 171
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -1849,7 +1850,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "rrgUU27Q5yyl",
-        "outputId": "7bec538c-cbbd-4449-edcb-e7c070cd1fd7",
+        "outputId": "b6572178-fd49-4ff6-b608-a8314a8a36d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
@@ -1859,10 +1860,10 @@
         "#when was the month with the lowest close?\n",
         "\n",
         "data.groupby(by= data.index.month).sum().sort_values(by='Close').head(1)\n",
-        "\n",
-        "#Answer is july"
+        "data.groupby(by= data.index.month).mean().sort_values(by='Close').head(1)\n",
+        "#Answer is july .  according to total close and average close per month "
       ],
-      "execution_count": 173,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1906,117 +1907,42 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>63,764.35999999998</td>\n",
-              "      <td>64,614.74</td>\n",
-              "      <td>62,903.43000000006</td>\n",
-              "      <td>63488</td>\n",
-              "      <td>62710344100</td>\n",
-              "      <td>7,468.63000000001</td>\n",
+              "      <td>90.703215</td>\n",
+              "      <td>91.912859</td>\n",
+              "      <td>89.478563</td>\n",
+              "      <td>90.3101</td>\n",
+              "      <td>8.920390e+07</td>\n",
+              "      <td>10.62394</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                   Open      High  ...       Volume         Adj Close\n",
-              "Date                               ...                               \n",
-              "7    63,764.35999999998 64,614.74  ...  62710344100 7,468.63000000001\n",
-              "\n",
-              "[1 rows x 6 columns]"
+              "           Open       High        Low    Close        Volume  Adj Close\n",
+              "Date                                                                   \n",
+              "7     90.703215  91.912859  89.478563  90.3101  8.920390e+07   10.62394"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 8
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qRr319Bb5-Ej",
-        "outputId": "667822d8-0fe2-40f5-b479-8b81d2262afe",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 111
-        }
+        "id": "qRr319Bb5-Ej"
       },
       "source": [
         "#And the lowest close of the day in the whole dataset?\n",
         "\n",
         "data.sort_values(by='Close').head(1)"
       ],
-      "execution_count": 186,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Open</th>\n",
-              "      <th>High</th>\n",
-              "      <th>Low</th>\n",
-              "      <th>Close</th>\n",
-              "      <th>Volume</th>\n",
-              "      <th>Adj Close</th>\n",
-              "      <th>date</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Date</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1982-07-06</th>\n",
-              "      <td>11.63</td>\n",
-              "      <td>11.63</td>\n",
-              "      <td>11.5</td>\n",
-              "      <td>11</td>\n",
-              "      <td>21924000</td>\n",
-              "      <td>0.18</td>\n",
-              "      <td>1982-07-06</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "            Open  High  Low  Close    Volume  Adj Close        date\n",
-              "Date                                                               \n",
-              "1982-07-06 11.63 11.63 11.5     11  21924000       0.18  1982-07-06"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 186
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2026,7 +1952,7 @@
       "source": [
         ""
       ],
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": []
     },
     {
